--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,7 +34,7 @@
 /* Footer */
 
 .footer-social-header {
-  @apply text-3xl font-bold font-subHeading;
+  @apply text-3xl font-bold font-subHeading text-secondary;
 }
 
 .footer-social-links {
