--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,12 +44,8 @@
 /* Work Experience */
 
 /* Project Card */
-.big-project-card-container {
-
-}
-
-.small-project-card-container {
-
+.project-card-link-icons {
+  @apply w-8 text-white  mx-2 transform hover:scale-125 duration-300;
 }
 
 /* Project Display Section */
