Added border colors according to skills

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,7 +49,7 @@
 }
 
 .skill-card {
-  @apply border rounded-lg p-2 m-2 text-sm text-primary font-content bg-black;
+  @apply border rounded-lg p-2 m-2 text-sm text-primary font-content font-normal bg-black;
 }
 
 /* Work Experience */
